--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </div>
 <script src="qrcode.js"></script>
 <script>
-
+/* test commit */
   document.getElementById('build').onclick = function(){
     new QRCode(document.getElementById("qrcode"), {
       width: 200,
