--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <script src="qrcode.js"></script>
 <script>
 /* test commit */
+/* test HBuild commit */
   document.getElementById('build').onclick = function(){
     new QRCode(document.getElementById("qrcode"), {
       width: 200,
