--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <script>
 
   document.getElementById('build').onclick = function(){
+    document.getElementById("qrcode").innerHTML = '';
     new QRCode(document.getElementById("qrcode"), {
       width: 200,
       height: 200,
