--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 </div>
 <script src="qrcode.js"></script>
 <script>
-/* test gh-pages commit */
+  document.getElementById('qrinfo').onfocus = function(){
+    this.value = '';
+  };
+
   document.getElementById('build').onclick = function(){
     document.getElementById("qrcode").innerHTML = '';
     new QRCode(document.getElementById("qrcode"), {
@@ -33,6 +36,8 @@
       text: $('#qrinfo').val()
     })
   })
+  test commit
+  test commit2
 </script-->
 </body>
 </html>
